--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="bootstrap-5.3.0-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css" integrity="sha512-W/zrbCncQnky/EzL+/AYwTtosvrM+YG/V6piQLSe2HuKS6cmbw89kjYkp3tWFn1dkWV7L1ruvJyKbLz73Vlgfg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 		
@@ -42,7 +43,7 @@
                     </ul></div>
 
             </div>
-        </div> <!-- .site-header -->
+        </div> 
 
         <div class="hero" data-bg-image="images/banner.png" style="background-image: url(&quot;images/banner.png&quot;);">
             <div class="container">
@@ -59,7 +60,7 @@
 <div class="forecast-header" id="today">
 <div class="day">Saturday</div>
 <div class=" date">12August</div>
-</div> <!-- .forecast-header -->
+</div> 
 <div class="forecast-content" id="current">
 <div class="location">Cairo</div>
 <div class="degree">
@@ -78,7 +79,7 @@
 </div>	<div class="forecast">
     <div class="forecast-header">
         <div class="day">Sunday</div>
-    </div> <!-- .forecast-header -->
+    </div> 
     <div class="forecast-content">
         <div class="forecast-icon">
             <img src="https://cdn.weatherapi.com/weather/64x64/day/113.png" alt="" width="48">
@@ -90,7 +91,7 @@
     </div>	<div class="forecast">
     <div class="forecast-header">
         <div class="day">Monday</div>
-    </div> <!-- .forecast-header -->
+    </div> 
     <div class="forecast-content">
         <div class="forecast-icon">
             <img src="https://cdn.weatherapi.com/weather/64x64/day/113.png" alt="" width="48">
@@ -116,18 +117,17 @@
                     </div>
                     <div class="col-md-3 col-md-offset-1">
                         <div class="social-links">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands  fa-google-plus"></i></a>
+                            <a href="#"><i class="fa-brands   fa-pinterest"></i></a>
                         </div>
                     </div>
                 </div>
 
                 <p class="colophon">Copyright 2014 Company name. Designed by Themezy. All rights reserved</p>
             </div>
-        </footer> <!-- .site-footer -->
-    </div>
+        </footer> 
     
   
 
